[package]
name = "githubWebHooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.56"
serde_json = "1.0.82"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }